@@ -1,9 +1,11 @@
 package ru.yandex.practicum.filmorate;
 
+import java.util.Objects;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import ru.yandex.practicum.filmorate.DTO.FilmDTO;
 import ru.yandex.practicum.filmorate.controller.FilmController;
 import ru.yandex.practicum.filmorate.model.Film;
 
@@ -29,19 +31,22 @@ class FilmControllerTest {
 
 	@Test
 	void getFilms_withFilms_returnsFilms() {
-		Film testFilm = Film.builder().id(1).name("Test Film").build();
+		FilmDTO testFilm = FilmDTO.builder().id(1).name("Test Film").build();
 		filmController.createFilm(testFilm);
 
 		ResponseEntity<List<Film>> response = filmController.getFilms();
 		assertEquals(HttpStatus.OK, response.getStatusCode());
 		assertNotNull(response.getBody());
 		assertEquals(1, response.getBody().size());
-		assertEquals(testFilm.getName(), response.getBody().get(0).getName());
+		assertEquals(testFilm.getName(), response.getBody().getFirst().getName());
 	}
 
 	@Test
 	void getFilm_existingFilm_returnsFilm() {
-		Film testFilm = Film.builder().name("Test Film").build();
+		FilmDTO testFilm = FilmDTO.builder().name("Test Film").description("test description").build();
+
+
+
 		filmController.createFilm(testFilm);
 
 		ResponseEntity<Film> response = filmController.getFilm(1);
@@ -59,7 +64,7 @@ class FilmControllerTest {
 
 	@Test
 	void updateFilm_existingFilm_updatesFilm() {
-		Film testFilm = Film.builder().id(1).name("Test Film").build();
+		FilmDTO testFilm = FilmDTO.builder().id(1).name("Test Film").build();
 		filmController.createFilm(testFilm);
 
 		Film updatedFilm = Film.builder().id(1).name("Updated Film").build();
@@ -70,7 +75,7 @@ class FilmControllerTest {
 		assertEquals("Updated Film", response.getBody().getName());
 
 		ResponseEntity<Film> getFilmResponse = filmController.getFilm(1);
-		assertEquals("Updated Film", getFilmResponse.getBody().getName());
+		assertEquals("Updated Film", Objects.requireNonNull(getFilmResponse.getBody()).getName());
 	}
 
 	@Test
@@ -85,7 +90,7 @@ class FilmControllerTest {
 
 	@Test
 	void createFilm_newFilm_createsFilm() {
-		Film newFilm = Film.builder().name("New Film").build();
+		FilmDTO newFilm = FilmDTO.builder().name("New Film").build();
 		ResponseEntity<Film> response = filmController.createFilm(newFilm);
 
 		assertEquals(HttpStatus.OK, response.getStatusCode());
